# spring-2026-lab03-CindyLyu1953

./: .gitignore
output/: eda_summary.txt  evaluation_metrics.json  trained_model.pkl  tuning_results.json  wine_classification_report.md
part1_claude_code/: IMPLEMENTATION_SUMMARY.md
part1_claude_code/src/: eda.py  evaluate_model.py  feature_engineering.py  generate_report.py  main.py  train_model.py  utils.py
part2_antigravity/: plan.md  pyproject.toml
part2_antigravity/output/: eda_summary.txt  evaluation_report.md
part2_antigravity/src/: eda.py  features.py  train.py
