[project]
name = "wine-classification"
version = "0.1.0"
description = "Wine classification ML pipeline"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "ipykernel>=6.0.0",
    "pyarrow>=14.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
